# sage-app-template

./: .dockerignore  .gitignore  get-back.py  main.py  pyproject.toml  sage.yaml
ecr-meta/: ecr-science-description.md
my-amazing-app-name/: main.py  requirements.txt  sage.yaml
test-run/: data.ndjson
tests/: test_main.py
